# TruthTableQt

./: .gitignore  CMakeLists.txt  README.md  app.rc  cursova.7z  cursova_en_GB.qm  cursova_en_GB.ts  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  truthtablebuilder.cpp  truthtablebuilder.h
CustomLineEdit/: customlineedit.cpp  customlineedit.h
ExcelExporter/: excelexporter.cpp  excelexporter.h
FileManager/: filemanager.cpp  filemanager.h
IniManager/: inimanager.cpp  inimanager.h
IniManager/HistoryManager/: historymanager.cpp  historymanager.h
IniManager/SettingsManager/: settingsmanager.cpp  settingsmanager.h
ThemeManager/: thememanager.cpp
TruthTableBuilder/: truthtablebuilder.cpp  truthtablebuilder.h
TruthTableTab/: truthtabletab.cpp  truthtabletab.h  truthtabletab.ui
tests/: test_validateexpression.cpp
